[gd_scene load_steps=43 format=3 uid="uid://d3d0xvjqipw4p"]

[ext_resource type="Script" uid="uid://6uxjuvqcwmxn" path="res://Scripts/Classes/States/StateMachine.gd" id="1_vjsy1"]
[ext_resource type="Script" uid="uid://350yxxawse7g" path="res://Scripts/Classes/Enemies/chuck.gd" id="1_wy5co"]
[ext_resource type="Texture2D" uid="uid://ddycifroc2bbo" path="res://Assets/Sprites/Enemys/ChuckSheet.png" id="3_64jfb"]
[ext_resource type="Script" uid="uid://b1am35ipx5vo1" path="res://Scripts/Classes/States/Chuck/Patrol.gd" id="3_qpoak"]
[ext_resource type="Script" uid="uid://bk5k8hpwbtweo" path="res://Scripts/Classes/States/Chuck/Charge.gd" id="4_f6xnu"]
[ext_resource type="Script" uid="uid://dao0lnsqpe0lf" path="res://Scripts/Classes/States/Chuck/Clap.gd" id="4_s6cml"]
[ext_resource type="Script" uid="uid://tark7gmansfc" path="res://Scripts/Classes/States/Chuck/Turn.gd" id="5_ckiqn"]
[ext_resource type="Script" uid="uid://dgl0kpymlj0m5" path="res://Scripts/Classes/States/Chuck/Hurt.gd" id="5_d67do"]
[ext_resource type="Script" uid="uid://cwy7pn0ualy27" path="res://Scripts/Classes/States/Chuck/Ball.gd" id="8_5gegr"]
[ext_resource type="Script" uid="uid://bmqwcsdvgotbm" path="res://Scripts/Classes/States/Chuck/dig.gd" id="9_jh3wq"]
[ext_resource type="Script" uid="uid://ywyiphgtxhgc" path="res://Scripts/Classes/States/Chuck/Football.gd" id="10_ljkko"]
[ext_resource type="Script" uid="uid://djesf6odxpytn" path="res://Scripts/Classes/States/Chuck/split.gd" id="11_7jufy"]
[ext_resource type="Texture2D" uid="uid://55bp86ljbfqk" path="res://Assets/Sprites/Objects/ChuckRock.png" id="11_55do4"]
[ext_resource type="Script" uid="uid://cokghdlpth0e6" path="res://Scripts/Classes/States/Chuck/ChuckState.gd" id="12_8h3ik"]
[ext_resource type="Script" uid="uid://drueh4gmoo5fb" path="res://Scripts/Classes/States/Chuck/Leap.gd" id="12_kub7b"]
[ext_resource type="Texture2D" uid="uid://dqs6gaenw3vla" path="res://Assets/Sprites/Objects/ChuckFootball.png" id="12_shi31"]
[ext_resource type="Script" uid="uid://dbao47ci1f74g" path="res://Scripts/Classes/States/Chuck/whistle.gd" id="14_4661n"]
[ext_resource type="Script" uid="uid://cib3wkgoiw57u" path="res://Scripts/Classes/water_bouyancy.gd" id="15_qdvbq"]
[ext_resource type="Script" uid="uid://dijvin054wujb" path="res://Scripts/Classes/ledge_detection.gd" id="16_k5qh8"]

[sub_resource type="Animation" id="Animation_k2kq1"]
resource_name = "BallIdle"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [11]
}

[sub_resource type="Animation" id="Animation_lrs3r"]
resource_name = "BallThrowAir"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [11, 14, 15, 11]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../States/Ball")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.4),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"jump"
}, {
"args": [],
"method": &"throw_ball"
}]
}

[sub_resource type="Animation" id="Animation_eke1o"]
resource_name = "BallThrowGround"
length = 0.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [11, 12, 13, 11]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../States/Ball")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"throw_ball"
}]
}

[sub_resource type="Animation" id="Animation_a7hvd"]
resource_name = "Charge"
length = 0.1
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [16, 17]
}

[sub_resource type="Animation" id="Animation_giva5"]
resource_name = "ClapAir"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_nt0c7"]
resource_name = "ClapCharge"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_artyx"]
resource_name = "ClapHit"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_6xkj0"]
resource_name = "Dig"
length = 3.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.5, 0.6, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [33, 34, 35, 36, 33]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Rock:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../States/Dig")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"summon_rock"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:offset")
tracks/3/interp = 0
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.6, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-3, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_bpv1b"]
resource_name = "DigIdle"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [33]
}

[sub_resource type="Animation" id="Animation_8731i"]
resource_name = "Football"
length = 4.0
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 1.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [11, 37, 11]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Football:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"summon_football"
}]
}

[sub_resource type="Animation" id="Animation_od67h"]
resource_name = "Hurt"
length = 2.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 1, 1.1, 1.2, 1.3, 1.4, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [3, 4, 5, 6, 7, 6, 8, 9, 8, 9, 10, 6]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Football:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Rock:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_8hr5s"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [22]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Rock:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Football:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_wfj5l"]
resource_name = "Split"
length = 0.2
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [25]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:offset")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-2, 0), Vector2(2, 0)]
}

[sub_resource type="Animation" id="Animation_anbx0"]
resource_name = "SplitIdle"
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [25]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:offset")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_4388u"]
resource_name = "Turn"
length = 0.9
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [23, 22, 21, 20, 19, 18]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Rock:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Football:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_onjhp"]
resource_name = "Whistle"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [38, 39]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ckuuf"]
_data = {
&"BallIdle": SubResource("Animation_k2kq1"),
&"BallThrowAir": SubResource("Animation_lrs3r"),
&"BallThrowGround": SubResource("Animation_eke1o"),
&"Charge": SubResource("Animation_a7hvd"),
&"ClapAir": SubResource("Animation_giva5"),
&"ClapCharge": SubResource("Animation_nt0c7"),
&"ClapHit": SubResource("Animation_artyx"),
&"Dig": SubResource("Animation_6xkj0"),
&"DigIdle": SubResource("Animation_bpv1b"),
&"Football": SubResource("Animation_8731i"),
&"Hurt": SubResource("Animation_od67h"),
&"RESET": SubResource("Animation_8hr5s"),
&"Split": SubResource("Animation_wfj5l"),
&"SplitIdle": SubResource("Animation_anbx0"),
&"Turn": SubResource("Animation_4388u"),
&"Whistle": SubResource("Animation_onjhp")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_msmp2"]
size = Vector2(8, 11)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cnyu1"]
size = Vector2(16, 17)

[sub_resource type="CircleShape2D" id="CircleShape2D_ld4a6"]
radius = 6.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kh84t"]
size = Vector2(32, 16)

[sub_resource type="CircleShape2D" id="CircleShape2D_158s3"]
radius = 96.3328

[sub_resource type="CircleShape2D" id="CircleShape2D_kub7b"]
radius = 256.0

[node name="Chuck" type="CharacterBody2D" node_paths=PackedStringArray("main_animation_player") groups=["Enemies"]]
collision_layer = 8
collision_mask = 4
script = ExtResource("1_wy5co")
state = "Charge"
ball_throw_amount = 6
ice_size = Vector2(2, 2)
main_animation_player = NodePath("Sprite/Animations")
player_bounce_off = false
can_spin_kill = false
can_ground_pound = false
can_fire_damage = false

[node name="States" type="Node" parent="."]
script = ExtResource("1_vjsy1")
initial_state = NodePath("Clap")

[node name="Idle" type="Node" parent="States"]
script = ExtResource("3_qpoak")

[node name="Charge" type="Node" parent="States"]
script = ExtResource("4_f6xnu")

[node name="Turn" type="Node" parent="States"]
script = ExtResource("5_ckiqn")

[node name="Clap" type="Node" parent="States"]
script = ExtResource("4_s6cml")

[node name="Timer" type="Timer" parent="States/Clap"]
wait_time = 0.5
autostart = true

[node name="Hurt" type="Node" parent="States"]
script = ExtResource("5_d67do")

[node name="Ball" type="Node" parent="States"]
script = ExtResource("8_5gegr")

[node name="Dig" type="Node" parent="States"]
script = ExtResource("9_jh3wq")

[node name="Football" type="Node" parent="States"]
script = ExtResource("10_ljkko")

[node name="Split" type="Node" parent="States"]
script = ExtResource("11_7jufy")

[node name="Leap" type="Node" parent="States"]
script = ExtResource("12_kub7b")
metadata/_custom_type_script = ExtResource("12_8h3ik")

[node name="Whistle" type="Node" parent="States"]
script = ExtResource("14_4661n")
metadata/_custom_type_script = ExtResource("12_8h3ik")

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(0, -16)
texture = ExtResource("3_64jfb")
hframes = 16
vframes = 8
frame = 22

[node name="Animations" type="AnimationPlayer" parent="Sprite"]
libraries = {
&"": SubResource("AnimationLibrary_ckuuf")
}

[node name="Rock" type="Sprite2D" parent="Sprite"]
visible = false
z_index = -10
z_as_relative = false
position = Vector2(-8, 16)
texture = ExtResource("11_55do4")

[node name="Football" type="Sprite2D" parent="Sprite"]
visible = false
position = Vector2(-16, 8)
texture = ExtResource("12_shi31")

[node name="Collision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -5.5)
shape = SubResource("RectangleShape2D_msmp2")

[node name="Hitbox" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, -7.5)
shape = SubResource("RectangleShape2D_cnyu1")
debug_color = Color(1, 1, 0, 0.419608)

[node name="ClapHurtBox" type="Area2D" parent="."]
visible = false
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClapHurtBox"]
position = Vector2(0, -24)
shape = SubResource("CircleShape2D_ld4a6")
debug_color = Color(1, 0, 0, 0.419608)

[node name="StepTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="VisibleOnScreenNotifier" type="VisibleOnScreenEnabler2D" parent="."]
self_modulate = Color(1, 1, 1, 0)
position = Vector2(2.84217e-14, -8)
scale = Vector2(1.7, 2.05)

[node name="VisibleOnScreenEnabler2D2" type="VisibleOnScreenNotifier2D" parent="."]
self_modulate = Color(1, 1, 1, 0)
position = Vector2(9.53674e-07, -8)
scale = Vector2(0.45, 0.625)

[node name="BlockDestructionBox" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="BlockDestructionBox"]
position = Vector2(0, -16)
shape = SubResource("RectangleShape2D_kh84t")

[node name="SplitDetectionArea" type="Area2D" parent="."]
visible = false
monitorable = false

[node name="Shape" type="CollisionShape2D" parent="SplitDetectionArea"]
position = Vector2(0, -8)
shape = SubResource("CircleShape2D_158s3")

[node name="WaterBouyancy" type="Node" parent="." node_paths=PackedStringArray("hitbox")]
script = ExtResource("15_qdvbq")
hitbox = NodePath("../Hitbox")

[node name="LedgeDetectionCast" type="RayCast2D" parent="."]
physics_interpolation_mode = 2
position = Vector2(-8, -16)
target_position = Vector2(0, 32)
script = ExtResource("16_k5qh8")

[node name="WhistleAlertBox" type="Area2D" parent="."]
visible = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="WhistleAlertBox"]
position = Vector2(0, -16)
shape = SubResource("CircleShape2D_kub7b")

[connection signal="timeout" from="States/Clap/Timer" to="States/Clap" method="_on_timer_timeout"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="StepTimer" to="States/Charge" method="_on_step_timer_timeout"]
[connection signal="screen_exited" from="VisibleOnScreenEnabler2D2" to="." method="_on_visible_on_screen_enabler_2d_screen_exited"]
[connection signal="area_entered" from="BlockDestructionBox" to="." method="_on_block_destruction_box_area_entered"]
[connection signal="area_entered" from="SplitDetectionArea" to="." method="_on_split_detection_area_area_entered"]
